# ledzap_service

./: ledzap.code-workspace
ledtest/: Cargo.toml
ledtest/src/: main.rs
openai-lib/: Cargo.toml
openai-lib/src/: lib.rs
openai-lib/src/client/: mod.rs  model.rs  openai_client.rs
zap/: Cargo.toml  README.md  presets.json
zap/src/: main.rs
zap/src/excuse/: api_keys.rs  excuse_generator.rs  mod.rs  model.rs  service.rs
zap/src/presets/: model.rs  service.rs
