[package]
name = "zap"
version = "0.99.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
crypto = "0.5.1"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0"
openai_lib = { path = "../openai-lib" }

